--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bookmarklets</title>
+	<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<p>Hello world</p>
+	<header>
+		<h1>Bookmarklets</h1>
+	</header>
+	<main>
+		<p>Hello World</p>
+	</main>
+	<footer>
+
+	</footer>
 </body>
 </html>
