--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 	<main>
 
+		<details>
+			<summary>Index</summary>
+			<ul id="index-list"></ul>
+		</details>
+
 		<blockquote>
 			<strong>What do bookmarklets do?</strong>
 			<p>
@@ -27,6 +32,7 @@
 				- <a data-content="href" href="https://support.mozilla.org/en-US/kb/bookmarklets-perform-common-web-page-tasks"></a>
 			</cite>
 		</blockquote>
+
 
 		<h3><a data-src="js/hello.js">Hello World</a></h3>
 		<p>
@@ -46,9 +52,22 @@
 			Highlights elements with the same id. Also logs them to the DevTools console.
 		</p>
 
-		<h3><a data-src="js/show-password.js">Show Password</a></h3>
+		<h3><a data-src="js/show-passwords.js">Show Passwords</a></h3>
 		<p>
 			Displays the contents of password fields.
+		</p>
+
+		<h3><a data-src="js/gitlab-merge-requests.js">GitLab Merge Requests</a></h3>
+		<p>
+			Lists merge requests for your starred projects.
+		</p>
+		<p>
+			Must be used in the <a href="https://gitlab.com/dashboard/merge_requests">Merge Requests</a> page.
+		</p>
+
+		<h3><a data-src="js/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
+		<p>
+			Copies to the clipboard the Cognito access token used by the current page.
 		</p>
 
 		<!--
@@ -61,10 +80,16 @@
 	</main>
 
 	<script>
+		const indexList = document.querySelector('#index-list');
+
 		document.querySelectorAll('a[data-src]').forEach(async anchor => {
 			const src = anchor.getAttribute('data-src');
 			const script = await fetch(src).then(res => res.text());
 			anchor.href = script;
+
+			const listItem = document.createElement('li');
+			listItem.append(anchor.cloneNode(true));
+			indexList.append(listItem);
 		});
 
 		document.querySelectorAll('[data-content').forEach(element => {
