fix: [data-content

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			indexList.append(listItem);
 		});
 
-		document.querySelectorAll('[data-content').forEach(element => {
+		document.querySelectorAll('[data-content]').forEach(element => {
 			const attribute = element.getAttribute('data-content');
 			const content = element.getAttribute(attribute);
 			element.textContent = content;
