fix: highlight-duplicate-ids

--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
 		<p>
 			Highlights elements with the same id. Also logs them to the DevTools console.
 		</p>
+		<p>
+			These two elements have the same id: <strong id="dup">First</strong> <em id="dup">Second</em>
+		</p>
 
 		<h3><a data-src="js/show-passwords.js">Show Passwords</a></h3>
 		<p>
 			Displays the contents of password fields.
+		</p>
+		<p>
+			<input type="password" value="hunter2">
 		</p>
 
 		<h3><a data-src="js/gitlab-merge-requests.js">GitLab Merge Requests</a></h3>
