fix: highlight-duplicate-ids

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 		<h3><a data-src="js/show-passwords.js">Show Passwords</a></h3>
 		<p>
-			Displays the contents of password fields.
+			Displays the contents of password fields. Run again to hide them back.
 		</p>
 		<p>
 			<input type="password" value="hunter2">
