--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 		<details>
 			<summary>Index</summary>
+			<p>Drag these to your bookmarks toolbar</p>
 			<ul id="index-list"></ul>
 		</details>
 
