--- a/index.html
+++ b/index.html
@@ -122,9 +122,13 @@
 		document.querySelectorAll('a[data-src]').forEach(async anchor => {
 			const src = anchor.getAttribute('data-src');
 			const script = await fetch(src).then(res => res.text());
-			const minified = minify(script).code;
-			// anchor.href = script;
-			anchor.href = `javascript:(()=>{ ${minified} })()`;
+			const minified = minify(script);
+
+			if (minified.error) {
+				console.log(minified.error);
+			} else {
+				anchor.href = `javascript:(()=>{ ${minified.code} })()`;
+			}
 
 			const listItem = document.createElement('li');
 			listItem.append(anchor.cloneNode(true));
@@ -137,6 +141,5 @@
 			element.textContent = content;
 		});
 	</script>
-	<script src="js/data-innerhtml.js"></script>
 </body>
 </html>
