--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
 
 		<h3><a data-src="bookmarklets/gitlab-merge-requests.js">GitLab Merge Requests</a></h3>
 		<p>
-			Lists merge requests for your starred projects.
-		</p>
-		<p>
-			Must be used in the <a href="https://gitlab.com/dashboard/merge_requests">Merge Requests</a> page.
+			Lists merge requests for your starred projects. Updates automatically every 5 minutes and
+			send a notification when there are new changes.
 		</p>
 
 		<h3><a data-src="bookmarklets/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
