--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
 
 		<h3><a data-src="bookmarklets/gitlab-merge-requests.js">GitLab Merge Requests</a></h3>
 		<p>
-			Lists merge requests for your starred projects. Updates automatically every 5 minutes and
-			send a notification when there are new changes.
+			Lists merge requests for your starred projects.
+		</p>
+		<p>
+			Updates the page automatically every 5 minutes and
+			sends a notification when there are new changes.
 		</p>
 
 		<h3><a data-src="bookmarklets/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
