--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			Lists merge requests for your starred projects.
 		</p>
 		<p>
-			Updates the page automatically every 5 minutes and
+			Updates the page automatically every minute and
 			sends a notification when there are new changes.
 		</p>
 
