add notes create-element

--- a/pages/notes.html
+++ b/pages/notes.html
@@ -70,6 +70,12 @@
       class="language-js"
       data-fetch="samples/save-file.js"
     ></code></pre>
+
+    <h3>Create Element</h3>
+    <pre><code
+      class="language-js"
+      data-fetch="samples/create-element.js"
+    ></code></pre>
   </main>
   <footer></footer>
 
