--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
 			sends a notification when there are new changes.
 		</p>
 
+		<h3><a data-src="bookmarklets/gitlab-run-pipeline.js">GitLab Run Pipeline</a></h3>
+		<p>
+			Runs pipelines for the current merge request's branch.
+		</p>
+		<p>
+			Must be used in a Merge Request page.
+		</p>
+
 		<h3><a data-src="bookmarklets/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
 		<p>
 			Copies to the clipboard the Cognito access token used by the current page.
