--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
 	<script src="https://unpkg.com/uglify-js@3.17.0/lib/propmangle.js"></script>
 
 	<script>
-		const indexList = document.querySelector('#index-list');
 
-		document.querySelectorAll('a[data-src]').forEach(async anchor => {
+		const $$ = (s, e = document) => [...e.querySelectorAll(s)];
+
+		const listItemPromises = $$('a[data-src]').map(async anchor => {
 			const src = anchor.getAttribute('data-src');
 			const script = await fetch(src).then(res => res.text());
 			const minified = minify(script);
@@ -144,7 +145,12 @@
 
 			const listItem = document.createElement('li');
 			listItem.append(anchor.cloneNode(true));
-			indexList.append(listItem);
+			return listItem;
+		});
+
+		Promise.all(listItemPromises).then(listItems => {
+			const indexList = document.querySelector('#index-list');
+			indexList.append(...listItems);
 		});
 
 		document.querySelectorAll('[data-content]').forEach(element => {
