change description: gl run pipeline

--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
 
 		<h3><a data-src="bookmarklets/gitlab-run-pipeline.js">GitLab Run Pipeline</a></h3>
 		<p>
-			Runs pipelines for the current merge request's branch.
-		</p>
-		<p>
-			Must be used in a Merge Request page.
+			Runs pipelines in the current project. If the current page is a merge request, then the
+			merge request's branch is the one to be executed, otherwise the branch must be provided.
 		</p>
 
 		<h3><a data-src="bookmarklets/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
