--- a/pages/gitlab-merge-requests.html
+++ b/pages/gitlab-merge-requests.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="style.css">
 
   <style>
-    img {
+    main img {
       margin: auto;
       display: block;
       border: 3px solid var(--text-light);
