gl-mrs warning messages

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 			Updates the page automatically every minute and
 			sends a notification when there are new changes.
 		</p>
+		<p>
+      <a href="pages/gitlab-merge-requests.html">
+        Usage instructions can be found here.
+      </a>
+    </p>
 
 		<h3><a data-src="bookmarklets/gitlab-run-pipeline.js">GitLab Run Pipeline</a></h3>
 		<p>
