add gl deploy link

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
       merge request's branch is the one to be executed, otherwise the branch must be provided.
     </p>
 
+    <h3><a data-src="bookmarklets/gitlab-deploy-link.js">GitLab Deployment Link</a></h3>
+    <p>
+      Use this in a GitLab Merge Request page. Copies to the clipboard a deployment link for the current MR's branch.
+    </p>
+
     <h3><a data-src="bookmarklets/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
     <p>
       Copies to the clipboard the Cognito access token used by the current page.
