--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 
     <h3><a data-src="bookmarklets/gitlab-deploy-link.js">GitLab Deployment Link</a></h3>
     <p>
-      Use this in a GitLab Merge Request page. Copies to the clipboard a deployment link for the current MR's branch.
+      Use this in a GitLab Merge Request page.
+      Copies to the clipboard a deployment link for the current MR's branch.
+      If you are in the Edit Merge Request page, also adds the link to the MR's description.
     </p>
 
     <h3><a data-src="bookmarklets/copy-cognito-access-token.js">Copy AWS Cognito Access Token</a></h3>
