gilab mrs: expand/collapse, enable notifications per project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       Back to Top
     </button>
 
-    <details>
+    <details open>
       <summary>Index</summary>
       <p>Drag these to your bookmarks toolbar</p>
       <ul id="index-list"></ul>
